flexc++ (2.00.00)

  * Completely re-implemented look-ahead operator (LOP) handling. The LOP is
    now handled through mini-scanners, the previously used class TailCount and
    the tail count Flag enum are no longer required and were removed from the
    implementation. See also parser/README.grammar.

  * Null-matching patterns using the look-ahead operator (e.g. a*/b) are
    dangerous, and can take the generated scanner into a non-terminating loop.
    When flexc++ detects such patterns it generates a warning. These warnings
    can be suppressed by writing 
    //%nowarn
    on the line immediately preceding the potentially null-matching pattern
    using the look-ahead operator.

  * Raw string literals, as defined by C++11, are supported

  * NOTE WELL: 

        - when using flexc++ >= 2.00.00 to re-generate lex.cc and
            ScannerBase.h, existing object files defining and using the
            Scanner object should be recompiled, as flexc++ 2.00.00 uses a
            different data-member organization in its ScannerBase class.

        - new Input-class requirements: 
            size_t Input::nPending() const 
                must return the current number of pending (i.e., pushed back) 
                input characters;
            void Input::setPending(size_t size) 
                must remove any initial number of pending characters, reducing
                the number of pending characters to size.
            The lexical scanner always passes the value received from
            nPending() to setPending(), without calling Input::get() in
            between.

        - Character classes now fully support escape sequences. A \- inside a
          character class indicates a litteral - and is not used to define a
          character range. Refer to the man-page (flexc++input(7)) and/or to
          the manual for further details.

  * A second (optional) %% line in flexc++'s input file ends input file