@@ -1,12 +1,17 @@
 #include "generator.ih"
 
-void Generator::errExisting(string const &fileName, string const &option,
+bool Generator::errExisting(string const &fileName, string const &option,
                              string const &pattern) const
 {
     if (not d_options.specified(option))
-        return;
+        return true;
 
     if (not grep(fileName, pattern))
+    {
         emsg << '`' << fileName << "' exists, option/directive `" << 
                 option << "' specification conflict" << endl;
+        return false;
+    }
+
+    return true;
 }
